--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
         <h1>Добро пожаловать на мою страницу!</h1>
         <nav>
             <ul>
-                <li><a href="#about">Обо мне</a></li>
-                <li><a href="#hobbies">Мои хобби</a></li>
-                <li><a href="#contact">Контакты</a></li>
-                <li><a href="#feedback">Обратная связь</a></li>
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="gallery.html">Галерея</a></li>
             </ul>
         </nav>
         <hr>
@@ -40,11 +38,6 @@
                 <li>Программирование</li>
                 <li>Спорт</li>
             </ul>
-        </section>
-
-        <section id="contact">
-            <h2>Контакты</h2>
-
         </section>
 
         <section id="feedback">
